--- a/jadi.html
+++ b/jadi.html
@@ -93,6 +93,8 @@
       </div>
     </section>
 
+    <!-- <p>Checking Connection</p> -->
+
     <footer>
       <div id="footercss">
         <div class="footer-content">
