payment fiture unavailable

--- a/jadi.html
+++ b/jadi.html
@@ -78,7 +78,7 @@
                   <li class="pricing-benefit-item">Yahahaha sendiri... sendirian juga gapapa, manusia diciptakan dengan caranya sendiri. jadi, rayakan dirimu sesering mungkin jangan tunggu semua orang untuk buat pesta, buat pestamu sendiri. Sendirian juga gapapa.</li>
               </ul>
               <span class="pricing-price">Rp 2.000</span>
-              <a href="https://laznasalirsyad.org/tabs-zakat-infaq-paymentgatway/" target="_blank" class="pricing-button">Beli Tiket</a>
+              <a onclick="payment()" class="pricing-button">Beli Tiket</a>
           </div>
           <div class="pricing-plan">
               <img src="images/berdua.jpg" alt="team">
@@ -87,7 +87,7 @@
                   <li class="pricing-benefit-item">APA?? Ya udah langsung aja <br> buru beli tiketnya -_- <br> mau protes kenapa 5 ribu? <br> ya serah saya lah, wong saya pengelolanya. Salah saya dimana? wong saya suka kok.</li>
               </ul>
               <span class="pricing-price">Rp 5.000</span>
-              <a href="#" onclick="alert(payment())" class="pricing-button">Beli Tiket</a>
+              <a href="#" onclick="payment()" class="pricing-button">Beli Tiket</a>
           </div>
         </div>
       </div>
